feat(product): adding product mock sample

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,10 @@
-// app global css in SCSS form
+// app global css in SCSS for
+
+.product-card-description {
+    max-width: 400px;
+    height: 150px;
+}
+.product-card-img{
+    max-width: 400px; 
+    height: 250px
+}
